comment fileJson = 'data/my_input1_clean.json';

--- a/public/index.html
+++ b/public/index.html
@@ -448,7 +448,7 @@
         stringObjetivoEstrategico = "Objetivo Estratégico";
         tableHeaders = ["ODS","Meta ODS","Objetivo PND", "PND_grupo"];
         idSVG = '#partitionSVG1';
-        fileJson = 'data/my_input1.json';
+        //fileJson = 'data/my_input1.json';
         fileJson = 'data/my_input1_clean.json';
         idTable = '#idTable';
         stringTitle = "Metas ODS ";
@@ -485,7 +485,7 @@
         colSubgroup = "PND_subgrupo";
         arcClass = "pnd_class";
         stringObjetivoEstrategico = "Objetivo Estratégico";
-        fileJson = 'data/my_input2.json';
+        //fileJson = 'data/my_input2.json';
         fileJson = 'data/my_input2_clean.json';
         stringTitle = "Objetivos PND ";
         tableHeaders = ["PND_grupo","Objetivo PND","Meta ODS", "ODS"]
